--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link href="https://fonts.googleapis.com/css?family=Product+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
 
 <body>
